Fixes icon alignment

--- a/assets/less/treeview.less
+++ b/assets/less/treeview.less
@@ -118,6 +118,7 @@
                         .icon(@icon-bars);
                         font-family: FontAwesome, 'octo-icon';
                         font-size: 18px;
+                        line-height: inherit;
                     }
                 }
 
